footer logo and links, pending form

--- a/app/layout/_footer.html
+++ b/app/layout/_footer.html
@@ -1,34 +1,29 @@
 <div class="container">
 	<div class="row">
-		<div class="col-xs-3 text-center footer-top">
+		<div class="col-xs-3 footer-top">
 			<img src="img/GT_LOGOTIPO_DIAPO_TRANSP.png" alt="Logo" class="col-xs-12">
+			<ul class="unstyled links-list">
+				<li><strong>Site map</strong></li>
+				<hr>
+				<li><a href="/"><span class="home-title"></span></a></li>
+				<li><a href="#" class="menu-link item-it-services"><span class="it-services-title"></span></a></li>
+				<li><a href="#" class="menu-link item-networking"><span class="networking-title"></span></a></li>
+				<li><a href="#" class="menu-link item-surveillance"><span class="surveillance-title"></span></a></li>
+				<li><a href="#" class="menu-link item-audio"><span class="audio-title"></span></a></li>
+				<li><a href="#" class="menu-link item-automation"><span class="automation-title"></span></a></li>
+				<hr>
+				<li>contact us</li>
+				<li><a href="mailto:carlosreyes@gadget-technology.com"><span class="footer-email">E-mail</span></a></li>
+				<li><a href="https://www.facebook.com/gadgethouston">Facebook</a></li>
+			</ul>
+
 		</div>
-		<div class="col-xs-5 vertical-bar-left vertical-bar-right footer-top">
+		<div class="col-xs-5 footer-top breathe">
 			<div class="row">
-				<div class="col-xs-8 breathe">
-					<ul class="unstyled">
-						<li><a href="/"><span class="home-title"></span></a></li>
-						<li><a href="#" class="menu-link item-it-services"><span class="it-services-title"></span></a></li>
-						<li><a href="#" class="menu-link item-networking"><span class="networking-title"></span></a></li>
-						<li><a href="#" class="menu-link item-surveillance"><span class="surveillance-title"></span></a></li>
-						<li><a href="#" class="menu-link item-audio"><span class="audio-title"></span></a></li>
-						<li><a href="#" class="menu-link item-automation"><span class="automation-title"></span></a></li>
-					</ul>
-				</div>
-				<div class="col-xs-4">
-					<ul class="unstyled">
-						<li><a href="mailto:carlosreyes@gadget-technology.com"><span class="footer-email">E-mail</span></a></li>
-						<li><a href="https://www.facebook.com/gadgethouston">Facebook</a></li>
-						<li><a href="#">Instagram</a></li>
-						<li>Idiomas</li>
-						<li>English</li>
-						<li>Español</li>
-						<li><a href="#"><span class="footer-contact">Contact Us</span></a></li>
-					</ul>
-				</div>
+				form
 			</div>
 		</div>
-		<div class="col-xs-3 map">
+		<div class="col-xs-3 map footer-top">
 			<ul class="unstyled spaced">
 				<li><strong><span class="footer-mobile">Mobile</span>:</strong></li>
 				<li><span class="footer-phone">713-517-6925</span></li>
@@ -40,6 +35,8 @@
 			</ul>
 		</div>
 	</div>
+	<br>
+	<br>
 	<br>
 	<div class="row footer-bottom">
 		<div class="col-sm-12">
