--- a/app/styles/footer.scss
+++ b/app/styles/footer.scss
@@ -13,7 +13,7 @@
 
 .footer {
 	color: #eee;
-	background-color: #636466;
+	background-color: #58595b;
 	border-top: 1px solid #e5e5e5;
 	margin-top:50px;
 	padding-top: 19px;
@@ -50,7 +50,7 @@ ul.spaced li {
 
 .copyright{
 	font-size: 10px;
-	padding-left : 25px;
+	padding-left : 15px;
 	margin-top : -50px;
 }
 
@@ -71,6 +71,12 @@ ul.spaced li {
 }
 
 .breathe{
-	padding-left: 40px;
-	padding-right: 40px;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+.links-list{
+	margin-top: 100px;
+	margin-left: 15px;
+	font-size: 13px;
 }
