--- a/app/layout/_footer.html
+++ b/app/layout/_footer.html
@@ -24,15 +24,15 @@
 					<h3><span class="contact-english">Contact Us</span> / <span class="contact-spanish">Contáctenos</span></h3>
 					<br>
 					<br>
-					<form action="sendEmail.php" method="POST">
+					<form action="sendMail.php" method="POST">
 						<div class="col-xs-12 text-left">
 							<label for="first_name">Name*</label>
 						</div>
 						<div class="col-xs-5">
-							<input type="text" class="form-control" id="first_name">
+							<input type="text" class="form-control" id="first_name" name="first_name">
 						</div>
 						<div class="col-xs-7">
-							<input type="text" class="form-control" id="last_name">
+							<input type="text" class="form-control" id="last_name" name="last_name">
 						</div>
 						<div class="col-xs-5 text-left">
 							<span class="text-muted">First</span>
@@ -44,13 +44,13 @@
 						<div class="col-xs-12 text-left">
 							<br>
 							<label for="email">Email*</label>
-							<input type="email" class="form-control" id="email">
+							<input type="email" class="form-control" id="email" name="email">
 						</div>
 
 						<div class="col-xs-12 text-left">
 							<br>
 							<label for="comment">Comment*</label>
-							<input type="textarea" rows="2" class="form-control" id="comment">
+							<input type="textarea" rows="2" class="form-control" id="comment" name="comment">
 						</div>
 						<div class="col-xs-12 text-left">
 							<br>
